--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
     <!-- Custom styles for this template -->
     <link href="css/creative.min.css" rel="stylesheet">
-
+    
+    <!-- The favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    
   </head>
 
   <body id="page-top">
