--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="css/creative.min.css" rel="stylesheet">
     
     <!-- The favicon -->
-    <link rel="icon" type="image/svg+xml" href="favicon.ico">
+    <link rel="icon" type="image/png" href="http://example.com/image.png" />
     
   </head>
 
