--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-music text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Musical Accompaniment</h3>
-              <p class="text-muted mb-0">Can provide choice background vocals and </p>
+              <p class="text-muted mb-0">Can provide choice background vocals and guitar playing for live performances and recordings</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
