--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">Get to know B. Sea</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">B. Sea has been singing for just about his whole life. Starting in elementary school and going on into college, he sang in choirs and was steeped in learning the craft of music. During this time he arranged acapella pieces for groups in his colligiate alma mater, taught himself guitar, bass, piano, and drums and began producing tracks. B. Sea is currently working on an ep of demos to be available for limited release! He has done background vocals for a few groups and individuals and played solo guitar looping sets in the likes of Rockwood Music Hall and The Parkside Lounge. You can find him playing such sets in his home base: New York City.</p>
+            <p class="text-faded mb-4">B. Sea has been singing for just about his whole life. Starting in elementary school and going on into college, he sang in choirs and was steeped in learning the craft of music. During this time he arranged acapella pieces for groups in his collegiate alma mater, taught himself guitar, bass, piano, and drums and began producing tracks. B. Sea is currently working on an ep of demos to be available for limited release! He has done background vocals for a few groups and individuals and played solo guitar looping sets in the likes of Rockwood Music Hall and The Parkside Lounge. You can find him playing such sets in his home base: New York City.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Looking for a performer?</a>
           </div>
         </div>
