Updating Video Styling

--- a/index.html
+++ b/index.html
@@ -134,36 +134,41 @@
     </section>
 
     <section class="bg-dark text-white" id="portfolio">
-    <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Videos</h2>
+    
+            <h1 class="section-heading text-white text-center">Videos</h1>
             <hr class="light my-4">
-      <div class="container text-center row">
-        <div class="col">
-          <div class="embed-responsive embed-responsive-16by9" style="margin-bottom:3%">
-          <iframe src="https://www.youtube.com/embed/Cm9scF0yAqA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 pt-3 pb-3">
+            <div class="embed-responsive embed-responsive-16by9" style="margin-bottom:3%">
+            <iframe src="https://www.youtube.com/embed/Cm9scF0yAqA" allow="autoplay; encrypted-media" allowfullscreen="" frameborder="0"></iframe>
+            </div>
           </div>
-        </div>
+        
 
-        <div class="col">
+        <div class="col-sm-6 pt-3 pb-3">
           <div class="embed-responsive embed-responsive-16by9" style="margin-bottom:3%">
-          <iframe src="https://www.youtube.com/embed/LY6JGn6KRYw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </div>
-        </div>
-
-        <div class="w-100"></div>
-
-        <div class="col">
-          <div class="embed-responsive embed-responsive-16by9" style="margin-bottom:3%">
-          <iframe src="https://www.youtube.com/embed/pOitqASc1VU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="embed-responsive embed-responsive-16by9" style="margin-bottom:3%">
-          <iframe src="https://www.youtube.com/embed/ts-d5LxTNcU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/LY6JGn6KRYw" allow="autoplay; encrypted-media" allowfullscreen="" frameborder="0"></iframe>
           </div>
         </div>
       </div>
+
+  
+  
+        <div class="row">
+              <div class="col-sm-6 pt-3 pb-3">
+                <div class="embed-responsive embed-responsive-16by9" style="margin-bottom:3%">
+                <iframe src="https://www.youtube.com/embed/pOitqASc1VU" allow="autoplay; encrypted-media" allowfullscreen="" frameborder="0"></iframe>
+                </div>
+              </div>
+
+              <div class="col-sm-6 pt-3 pb-3">
+                <div class="embed-responsive embed-responsive-16by9" style="margin-bottom:3%">
+                <iframe src="https://www.youtube.com/embed/ts-d5LxTNcU" allow="autoplay; encrypted-media" allowfullscreen="" frameborder="0"></iframe>
+                </div>
+            </div>
+          </div>
+        </div>
     </section>
 
     <section id="contact">
