--- a/index.html
+++ b/index.html
@@ -169,6 +169,18 @@
             </div>
           </div>
         </div>
+      <div class="container">
+       <h1 class="section-heading text-white text-center pt-5">Spotify</h1>
+            <hr class="light my-4">
+       <div class="row">
+  <div class="col-sm-4 pt-3 pb-3"></div>
+         <div class="col-sm-4 pt-3 pb-3">
+           <iframe src="https://open.spotify.com/embed/artist/2egDXscaudbABzLDr8brOo?theme=0" allowtransparency="true" allow="encrypted-media" width="100%" height="100%" frameborder="0"></iframe>
+           <div>
+             <div class="col-sm-4 pt-3 pb-3"></div>
+       </div>
+  </div>
+    </div></div>
     </section>
 
     <section id="contact">
