--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div></div>
     </section>
 
-    <section id="contact">
+    <section class="bg-primary" id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
@@ -136,7 +136,7 @@
             <p class="mb-5">Follow me!</p>
           </div>
   </div>
-  <div class="row">
+  <div class="row text-white">
     <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-facebook-square fa-3x mb-3 sr-contact" data-sr-id="9" style="; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "></i>
             <p>
@@ -164,7 +164,7 @@
             <p class="mb-5">Contact info for any inquiries!</p>
           </div>
         </div>
-        <div class="row">
+        <div class="row text-white">
           <div class="col-lg-6 ml-auto text-center">
             <i class="fa fa-phone fa-3x mb-3 sr-contact" data-sr-id="7" style="; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "></i>
             <p>201-588-6640</p>
