--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
     <section class="bg-primary" id="contact">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
+          <div class="col-lg-8 mx-auto text-center text-white">
             <h1 class="section-heading">Socials</h1>
-            <hr class="my-4">
+            <hr class="light my-4">
             <p class="mb-5">Follow me!</p>
           </div>
   </div>
@@ -140,27 +140,27 @@
     <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-facebook-square fa-3x mb-3 sr-contact" data-sr-id="9" style="; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "></i>
             <p>
-              <a href="https://www.facebook.com/bseab/">B. Sea on Facebook</a>
+              <a style="color:white" href="https://www.facebook.com/bseab/">B. Sea on Facebook</a>
             </p>
           </div>
     <div class="col-lg-4 mr-auto text-center">
             <i data-sr-id="9" style="; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; " class="fa fa-instagram fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="https://www.instagram.com/bsea.gram/">B. Sea on Instagram</a>
+              <a style="color:white" href="https://www.instagram.com/bsea.gram/">B. Sea on Instagram</a>
             </p>
           </div>
     <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-youtube-square fa-3x mb-3 sr-contact" data-sr-id="9" style="; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "></i>
             <p>
-              <a href="https://www.youtube.com/c/bseamusic">B. Sea on YouTube</a>
+              <a style="color:white" href="https://www.youtube.com/c/bseamusic">B. Sea on YouTube</a>
             </p>
           </div>
   </div>
           
         <div class="row pt-4">
-          <div class="col-lg-8 mx-auto text-center pt-5">
+          <div class="col-lg-8 mx-auto text-center pt-5 text-white">
             <h2 class="section-heading">Let's Get In Touch!</h2>
-            <hr class="my-4">
+            <hr class="light my-4">
             <p class="mb-5">Contact info for any inquiries!</p>
           </div>
         </div>
@@ -172,7 +172,7 @@
           <div class="col-lg-6 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact" data-sr-id="8" style="; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "></i>
             <p>
-              <a href="mailto:bseamusic@gmail.com">bseamusic@gmail.com</a>
+              <a style="color:white" href="mailto:bseamusic@gmail.com">bseamusic@gmail.com</a>
             </p>
           </div>
           
